# 8-9bit-vcm-based-sar

./: .gitignore  PROJECT_STATUS.md  README.md  VIRTUOSO_BRIDGE_SETUP.md
virtuoso-bridge-lite/: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
virtuoso-bridge-lite/docs/: index.html
virtuoso-bridge-lite/docs/superpowers/plans/: 2026-04-09-dismiss-dialog.md
virtuoso-bridge-lite/examples/: _timing.py  circuit.vss  test_visio_export.py
virtuoso-bridge-lite/examples/01_virtuoso/assets/: file_ops.il  helloWorld.il  layout_ops.il  screenshot.il
virtuoso-bridge-lite/examples/01_virtuoso/basic/: 00_ciw_output_vs_return.py  05_multiline_skill.py
virtuoso-bridge-lite/examples/01_virtuoso/digital_import/: README.md  add_power_labels.py  digital_import.py  import_gds.py  restyle_labels.py
virtuoso-bridge-lite/examples/01_virtuoso/layout/: 01_create_layout.py  02_add_polygon.py  03_add_via.py  04_multilayer_routing.py  flower.py  (+8 more)
virtuoso-bridge-lite/examples/02_spectre/: 01_inverter_tran.py  01_veriloga_adc_dac.py  02_cap_dc_ac.py
virtuoso-bridge-lite/scripts/: fix-symlinks.sh  track_traffic.py
virtuoso-bridge-lite/src/virtuoso_bridge/: __init__.py  cli.py  daemon_guard.py  profile.py  runtime_paths.py
virtuoso-bridge-lite/stats/: README.md  clones-badge.json  clones.json  views-badge.json  views.json
virtuoso-bridge-lite/tests/: test_cli_eval.py  test_cli_load.py  test_maestro_read_results.py  test_profile_resolver.py  test_runtime_paths.py  test_skill_finder.py  test_spectre_parsers.py  test_spectre_runtime_paths.py  test_tunnel_profiles.py
(+511 files in other folders)
